feat(modeling): reconstruct independent model boundaries
Wire model actions into local and tracked command handling, reconstruct exact pinned model streams and dependencies, and keep direct searchable documents synchronous after authoritative commits.

Add bounded paging, action-boundary replay, snapshots, cache catch-up, graph bundles, typed model heads, receiver/interceptor composition, and regression benchmarks without changing legacy aggregate handling.